cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
add_executable( LoadModifySave LoadModifySave.cpp )
target_link_libraries( LoadModifySave ${OpenCV_LIBS} )
add_executable( mat_the_basic_image_container mat_the_basic_image_container.cpp )
target_link_libraries( mat_the_basic_image_container ${OpenCV_LIBS} )
add_executable( how_to_scan_images how_to_scan_images.cpp )
target_link_libraries( how_to_scan_images ${OpenCV_LIBS} )
add_executable( mat_mask_operations mat_mask_operations.cpp )
target_link_libraries( mat_mask_operations ${OpenCV_LIBS} )
add_executable( adding_images adding_images.cpp )
target_link_libraries( adding_images ${OpenCV_LIBS} )
add_executable( basic_linear_transforms basic_linear_transforms.cpp )
target_link_libraries( basic_linear_transforms ${OpenCV_LIBS} )
add_executable( Drawing_1 Drawing_1.cpp )
target_link_libraries( Drawing_1 ${OpenCV_LIBS} )
add_executable( Drawing_2 Drawing_2.cpp )
target_link_libraries( Drawing_2 ${OpenCV_LIBS} )
add_executable( discrete_fourier_transform discrete_fourier_transform.cpp )
target_link_libraries( discrete_fourier_transform ${OpenCV_LIBS} )
add_executable( Smoothing Smoothing.cpp )
target_link_libraries( Smoothing ${OpenCV_LIBS} )
add_executable( generalContours_demo1 generalContours_demo1.cpp )
target_link_libraries( generalContours_demo1 ${OpenCV_LIBS} )
add_executable( objectDetection objectDetection.cpp )
target_link_libraries( objectDetection ${OpenCV_LIBS} )
add_executable( objectDetection2 objectDetection2.cpp )
target_link_libraries( objectDetection2 ${OpenCV_LIBS} )
